@@ -52,6 +52,7 @@
 #define STATUS_INVALID_NETWORK_RESPONSE ((NTSTATUS) 0xc00000c3)
 #define STATUS_BAD_NETWORK_NAME       ((NTSTATUS) 0xc00000cc)
 #define STATUS_DIRECTORY_NOT_EMPTY    ((NTSTATUS) 0xc0000101)
+#define STATUS_PROCESS_IS_TERMINATING ((NTSTATUS) 0xc000010a)
 #define STATUS_CANNOT_DELETE          ((NTSTATUS) 0xc0000121)
 #define STATUS_INVALID_LEVEL          ((NTSTATUS) 0xc0000148)
 #define STATUS_DLL_NOT_FOUND          ((NTSTATUS) 0xc0000135)
